--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   mongo:
     image: mongo:latest
@@ -7,7 +6,7 @@ services:
     volumes:
       - /data/db # Create a volume for the DB.
   client:
-    container_name: client
+    container_name: client-dev
     build:
       context: ./client
       dockerfile: Dockerfile.dev
@@ -21,6 +20,7 @@ services:
       - ./client:/app #Synchronise docker container with local change
       - /app/node_modules #Avoid re-copying local node_modules. Cache in volume.
   server:
+    container_name: server-dev
     build:
       context: ./server
       dockerfile: Dockerfile.dev
