--- a/server/package.json
+++ b/server/package.json
@@ -46,6 +46,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
+    "@types/joi": "^17.2.3",
     "@types/mongo-sanitize": "^1.0.1",
     "@types/node": "16.11.48",
     "@types/passport": "^1.0.10",
