--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@google/genai": "^1.5.1",
     "@prisma/client": "6.9.0",
     "@sendgrid/mail": "^7.7.0",
+    "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
@@ -38,9 +39,11 @@
     "passport": "0.4.1",
     "passport-local": "^1.0.0",
     "ramda": "^0.28.0",
+    "uuid": "^11.1.0",
     "winston": "^3.8.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
@@ -52,6 +55,7 @@
     "@types/passport": "^1.0.10",
     "@types/passport-local": "^1.0.34",
     "@types/ramda": "^0.28.15",
+    "@types/uuid": "^10.0.0",
     "@types/winston": "^2.4.4",
     "prisma": "^6.9.0",
     "ts-node-dev": "^2.0.0",
