--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,5 @@
 # build environment
-FROM node:16.16-alpine3.16 as build
+FROM node:18-alpine
 
 ARG NODE_ENV_ARG
 ARG REACT_APP_API_URL_ARG
@@ -11,7 +11,7 @@ WORKDIR /app
 ENV PATH="./node_modules/.bin:$PATH"
 COPY package.json ./
 COPY yarn.lock ./
-RUN yarn install
+RUN yarn install --immutable
 
 COPY . .
 RUN yarn build
@@ -23,3 +23,5 @@ COPY --from=build /app/build /usr/share/nginx/html
 COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
+
+CMD ["yarn", "start"]
