--- a/client/package.json
+++ b/client/package.json
@@ -4,18 +4,27 @@
   "description": "Client for MERN auth",
   "private": true,
   "main": "index.js",
-  "author": "Flavien Rebattet",
+  "author": "Basit",
   "license": "MIT",
   "dependencies": {
     "@hookform/resolvers": "^2.9.7",
+    "@stripe/react-stripe-js": "^3.5.1",
+    "@stripe/stripe-js": "^6.1.0",
+    "@tailwindcss/postcss": "^4.0.15",
     "axios": "^0.27.2",
+    "clsx": "^2.1.1",
+    "daisyui": "^5.0.9",
+    "postcss": "^8.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "react-select": "^5.10.1",
     "redux": "4.2.0",
     "redux-thunk": "^2.4.1",
+    "stripe": "^17.7.0",
     "yup": "^0.32.11"
   },
   "scripts": {
@@ -35,11 +44,16 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/node": "^16.11.48",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
+    "@babel/core": "^7.26.10",
+    "@babel/plugin-syntax-flow": "^7.26.0",
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@types/node": "^22.13.11",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-select": "^5.0.1",
     "react-scripts": "^5.0.1",
+    "tailwindcss": "3",
     "typescript": "^4.7.4"
   }
 }
