--- a/client/package.json
+++ b/client/package.json
@@ -7,23 +7,24 @@
   "author": "Basit",
   "license": "MIT",
   "dependencies": {
-    "@hookform/resolvers": "^2.9.7",
+    "@hookform/resolvers": "^2.9.11",
     "@stripe/react-stripe-js": "^3.5.1",
     "@stripe/stripe-js": "^6.1.0",
     "@tailwindcss/postcss": "^4.0.15",
+    "@tanstack/react-query": "^5.80.7",
     "axios": "^0.27.2",
     "clsx": "^2.1.1",
     "daisyui": "^5.0.9",
     "postcss": "^8.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.34.2",
+    "react-hook-form": "^7.58.0",
     "react-hot-toast": "^2.4.1",
-    "react-redux": "^8.0.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.10.1",
-    "redux": "4.2.0",
-    "redux-thunk": "^2.4.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "stripe": "^17.7.0",
     "yup": "^0.32.11"
   },
@@ -50,6 +51,7 @@
     "@types/node": "^22.13.11",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-select": "^5.0.1",
     "react-scripts": "^5.0.1",
